--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "database": "npx prisma studio",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
