--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
+    "test": "jest",
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
@@ -27,12 +28,15 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
+    "jest": "^30.1.3",
     "tailwindcss": "^4",
+    "ts-jest": "^29.4.2",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.5",
     "typescript": "^5"
