--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^6.15.0",
     "bcrypt": "^6.0.0",
+    "client-s3": "github:aws-sdk/client-s3",
     "lucide-react": "^0.543.0",
     "next": "15.5.2",
     "next-auth": "^4.24.11",
