--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^6.15.0",
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "client-s3": "github:aws-sdk/client-s3",
     "client-ses": "github:aws-sdk/client-ses",
     "lucide-react": "^0.543.0",
