--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "database": "npx prisma studio",
-    "build": "next build --turbopack --no-lint",
+    "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
     "test": "jest",
