--- a/amplify.yml
+++ b/amplify.yml
@@ -5,6 +5,8 @@ applications:
       phases:
         preBuild:
           commands:
+            - echo "Clearing Next.js cache"
+            - rm -rf .next
             - npm install
         build:
           commands:
@@ -12,6 +14,9 @@ applications:
             - npx prisma generate
             # Apply migrations in Neon
             - npx prisma migrate deploy
+            # Clear cache again to avoid stale SSR chunks
+            - echo "Clearing .next cache again to avoid stale SSR chunks"
+            - rm -rf .next
             # Build Next.js app
             - npm run build
       artifacts:
