--- a/package.json
+++ b/package.json
@@ -12,38 +12,38 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "3.901.0",
-    "@aws-sdk/s3-request-presigner": "3.901.0",
-    "@hookform/resolvers": "5.2.1",
-    "@prisma/client": "6.15.0",
-    "bcryptjs": "3.0.2",
+    "@aws-sdk/client-s3": "^3.901.0",
+    "@aws-sdk/s3-request-presigner": "^3.901.0",
+    "@hookform/resolvers": "^5.2.1",
+    "@prisma/client": "^6.15.0",
+    "bcryptjs": "^3.0.2",
     "client-s3": "github:aws-sdk/client-s3",
     "client-ses": "github:aws-sdk/client-ses",
-    "lucide-react": "0.543.0",
+    "lucide-react": "^0.543.0",
     "next": "15.5.2",
-    "next-auth": "4.24.11",
-    "nodemailer": "6.10.1",
-    "prisma": "6.15.0",
+    "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.1",
+    "prisma": "^6.15.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "7.62.0",
-    "zod": "4.1.5"
+    "react-hook-form": "^7.62.0",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "3",
-    "@tailwindcss/postcss": "4",
-    "@types/jest": "30.0.0",
-    "@types/node": "20",
-    "@types/react": "19",
-    "@types/react-dom": "19",
-    "eslint": "9",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "jest": "30.1.3",
-    "tailwindcss": "4",
-    "ts-jest": "29.4.2",
-    "ts-node": "10.9.2",
-    "tsx": "4.20.5",
-    "typescript": "5"
+    "jest": "^30.1.3",
+    "tailwindcss": "^4",
+    "ts-jest": "^29.4.2",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.5",
+    "typescript": "^5"
   },
   "prisma": {
     "schema": "prisma/schema.prisma"
