--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.901.0",
+    "@aws-sdk/client-ses": "^3.901.0",
     "@aws-sdk/s3-request-presigner": "^3.901.0",
     "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^6.15.0",
