--- a/amplify.yml
+++ b/amplify.yml
@@ -9,6 +9,10 @@ applications:
         build:
           commands:
             - echo "DATABASE_URL=$DATABASE_URL" >> .env
+            - echo "SES_ACCESS_KEY_ID=$SES_ACCESS_KEY_ID" >> .env
+            - echo "SES_SECRET_ACCESS_KEY=$SES_SECRET_ACCESS_KEY" >> .env
+            - echo "SES_REGION=$SES_REGION" >> .env
+            - echo "SES_FROM_ADDRESS=$SES_FROM_ADDRESS" >> .env
             - npx prisma generate
             # Apply migrations in Neon
             - npx prisma migrate deploy
@@ -17,7 +21,7 @@ applications:
       artifacts:
         baseDirectory: .next
         files:
-          - '**/*'
+          - "**/*"
       cache:
         paths:
           - node_modules/**/*
