--- a/amplify.yml
+++ b/amplify.yml
@@ -14,6 +14,7 @@ applications:
             - echo "SES_REGION=$SES_REGION" >> .env
             - echo "SES_FROM_ADDRESS=$SES_FROM_ADDRESS" >> .env
             - echo "CRON_SECRET=$CRON_SECRET" >> .env
+            - echo "APP_URL=$APP_URL" >> .env
             - echo "SYSTEM_ADMIN_ID=$SYSTEM_ADMIN_ID" >> .env
             - npx prisma generate
             # Apply migrations in Neon
